# Insta_bot

./: .gitignore  README.md  pyproject.toml
scripts/: functions.py  insta.py
